# Citron

./: .gitignore  .gitmodules  CMakeLists.txt  build-citron-linux.sh  build-clangtron-windows.sh  build-for-mingw.bat  build-for-mingw.sh  vcpkg.json
AppImageBuilder/: build-v2.sh  config.sh.in  package-citron-linux.sh  quick-sharun.sh
AppImageBuilder/assets/: citron.desktop  citron.sh
CMakeModules/: BuildClangClFFmpeg.cmake  CopyCitronFFmpegDeps.cmake  CopyCitronQt6Deps.cmake  dependencies.cmake  openssl_build.cmake  qt_download.cmake  xcb_build.cmake
docs/: BUILDING-CITRON-LINUX.md  BUILDING-CITRON-WINDOWS.md  BUILDING-CLANGTRON-WINDOWS.md
patches/: opus-clangcl-sse4.patch
src/: CMakeLists.txt
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/jni/: CMakeLists.txt  android_config.cpp  android_config.h  native.cpp  native.h  native_config.cpp  native_input.cpp
src/android/app/src/main/res/drawable/: gradient_cover_overlay.xml  ic_view_grid.xml  ic_view_grid_3.xml  ic_view_list.xml
src/android/app/src/main/res/layout/: card_game_cover.xml  dialog_direct_connect.xml  fragment_games.xml
src/android/app/src/main/res/menu/: menu_in_game.xml
src/android/app/src/main/res/values/: arrays.xml  (+2 more)
src/android/app/src/main/res/values-zh-rCN/: strings.xml
src/audio_core/: CMakeLists.txt
src/citron/: CMakeLists.txt  game_grid_delegate.cpp  game_list.cpp  game_list.h  game_list_delegate.cpp  loading_screen.cpp  loading_screen.h  main.cpp  main.h  main.ui  startup_checks.cpp  theme.h  uisettings.cpp  uisettings.h
src/citron/configuration/: configure_dialog.cpp  configure_filesystem.cpp  configure_filesystem.h  configure_filesystem.ui  configure_general.cpp  configure_general.ui  configure_per_game.cpp  configure_per_game.h  configure_web.cpp  configure_web.ui  qt_config.cpp  shared_widget.cpp
src/citron/debugger/: function_browser.cpp
src/citron/ui/: game_carousel_view.cpp  game_grid_view.cpp
src/citron/util/: image_cache.h
src/citron_cmd/: CMakeLists.txt  citron.cpp  citron_sdl_config.cpp
src/common/: CMakeLists.txt  common_funcs.h  dynamic_library.cpp  host_memory.cpp  host_memory.h  logging.cpp  logging.h  nvdec_lifetime_trace.h  settings.cpp  settings.h  settings_setting.h  slot_vector.h  time_zone.cpp  uint128.h  xci_trimmer.cpp  xci_trimmer.h
src/common/android/: id_cache.cpp
src/common/android/applets/: software_keyboard.cpp
src/common/x64/: cpu_wait.cpp  xbyak_abi.h  xbyak_util.h
src/core/: core.cpp  core_timing.h  device_memory_manager.h  device_memory_manager.inc  memory.cpp
src/core/arm/nce/: arm_nce.cpp  interpreter_visitor.cpp  patcher.cpp  patcher.h
src/core/file_sys/: card_image.cpp  card_image.h  content_archive.cpp  patch_manager.cpp  patch_manager.h  registered_cache.cpp  registered_cache.h
src/core/file_sys/fssystem/: fssystem_nca_file_system_driver.cpp  fssystem_nca_header.h  fssystem_nca_reader.cpp
src/core/hle/kernel/: k_hardware_timer.cpp  k_memory_manager.cpp  k_memory_manager.h  k_page_table_base.cpp  k_page_table_base.h  k_scoped_resource_reservation.h  kernel.cpp  physical_core.cpp
src/core/hle/service/: services.cpp
src/core/hle/service/aoc/: addon_content_manager.cpp
src/core/hle/service/filesystem/: filesystem.cpp  filesystem.h
src/core/hle/service/filesystem/fsp/: fsp_srv.cpp
src/core/hle/service/nvdrv/core/: heap_mapper.cpp  nvmap.cpp  nvmap.h
src/core/hle/service/nvdrv/devices/: nvhost_as_gpu.cpp  nvhost_nvdec.cpp  nvhost_nvdec_common.cpp  nvhost_vic.cpp
src/core/hle/service/nvnflinger/: buffer_queue_core.cpp  buffer_queue_producer.cpp
src/core/loader/: deconstructed_rom_directory.cpp  loader.cpp  nca.cpp  nso.cpp
src/core/memory/: cheat_engine.cpp  cheat_engine.h
src/dynarmic/common/: assert.h  common_types.h  logging.h
src/dynarmic/common/x64/: xbyak.h
src/frontend_common/: config.cpp
src/input_common/drivers/: android.cpp  android.h
src/ios/: CMakeLists.txt  CitronIOS.Debug.entitlements  CitronIOS.entitlements  Info.plist  codesign_embedded.sh  jit_icache_callbacks_ios.cpp  native.cpp  native.h
src/ios/App/: CitronBridge.swift  CitronIOSApp.swift  ContentView.swift  GameControllerManager.swift  RenderView.swift
src/ios/emu_window/: emu_window.cpp  emu_window.h
src/shader_recompiler/frontend/maxwell/: decode.cpp  decode.h
src/shader_recompiler/frontend/maxwell/translate/impl/: vote.cpp
src/tests/: CMakeLists.txt
src/tests/common/: logging.cpp  uint128.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  gpu_thread.cpp  gpu_thread.h  macro.cpp  macro.h  memory_manager.cpp  memory_manager.h  rasterizer_interface.h  shader_environment.cpp  shader_environment.h
src/video_core/buffer_cache/: buffer_cache.h  buffer_cache_base.h
src/video_core/engines/: kepler_compute.cpp  maxwell_3d.cpp
src/video_core/host1x/: host1x.cpp
src/video_core/host1x/codecs/: h264.cpp  vp8.cpp  vp9.cpp
src/video_core/renderer_vulkan/: pipeline_helper.h  vk_compute_pipeline.cpp  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_state_tracker.cpp  vk_texture_cache.cpp
src/video_core/texture_cache/: descriptor_table.h  util.cpp
src/video_core/vulkan_common/: vulkan_device.cpp  vulkan_memory_allocator.cpp  vulkan_memory_allocator.h
(+39 files in other folders)
